Prevent text size adjusting on Safari on iOS. Fix #9

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -28,6 +28,7 @@ html, body, #container
 body
   background: color-background
   font: font-size font-sans
+  -webkit-text-size-adjust: 100%
 
 .outer
   clearfix()
